[project]
name = "partner"
version = "0.1.0"
description = ""
authors = [
    {name = "king",email = "3371715457@qq.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "partner", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "0.138.0"
sqlmodel = "0.0.38"
loguru = "0.7.3"
uvicorn = "0.49.0"
dotenv = "0.9.9"
pydantic-settings = "2.14.2"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
